# httpsServer_onWiFi_ST_Mode

./: CMakeLists.txt  README.md  generateSaveCerts.py  partition_table.csv  sdkconfig
components/certificates/: CMakeLists.txt  certificates.c  certificates.h
components/st_server/: CMakeLists.txt  Kconfig.projbuild  index.html  st_server.c  st_server.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c  wifi.h
main/: CMakeLists.txt  main.c
